--- a/build.gradle
+++ b/build.gradle
@@ -38,16 +38,16 @@ dependencies {
     include(implementation("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}"))
     include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixin_extras_version}")))
     include(modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}"))
-    include(modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"))
 
     modImplementation("dev.emi:trinkets:${project.trinkets_version}")
     modImplementation("mod.azure.azurelibarmor:azurelibarmor-fabric-${project.azure_mc_version}:${project.azure_lib_version}")
 
-    modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
-    modImplementation("maven.modrinth:spell-power:${project.spell_power_version}-fabric")
-    modImplementation("maven.modrinth:projectile-damage-attribute:${project.projectile_version}-fabric")
-//    modImplementation(files("run/mods/dev/spell_engine-${project.spell_engine_version}.jar"))
-//    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
+//    modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
+//    modImplementation("maven.modrinth:spell-power:${project.spell_power_version}-fabric")
+//    include(modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"))
+    modImplementation(files("run/mods/dev/spell_engine-${project.spell_engine_version}.jar"))
+    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
+    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
 }
 
 processResources {
@@ -115,7 +115,6 @@ if(project.hasProperty('release_type')) {
                 requiredDependency 'fabric-api'
                 requiredDependency 'azurelib-armor'
                 requiredDependency 'spell-engine'
-                requiredDependency 'projectile-damage-attribute'
                 requiredDependency 'ranged-weapon-api'
             }
 
@@ -146,7 +145,6 @@ if(project.hasProperty('release_type')) {
             required.project 'fabric-api'
             required.project 'azurelib-armor'
             required.project 'spell-engine'
-            required.project 'projectile-damage-attribute'
             required.project 'ranged-weapon-api'
         }
     }
