--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,12 @@ dependencies {
     modImplementation("dev.emi:trinkets:${project.trinkets_version}")
     modImplementation("mod.azure.azurelibarmor:azurelibarmor-fabric-${project.azure_mc_version}:${project.azure_lib_version}")
 
-//    modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
-//    modImplementation("maven.modrinth:spell-power:${project.spell_power_version}-fabric")
-//    include(modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"))
-    modImplementation(files("run/mods/dev/spell_engine-${project.spell_engine_version}.jar"))
-    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
-    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
+    modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
+    modImplementation("maven.modrinth:spell-power:${project.spell_power_version}-fabric")
+    include(modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"))
+//    modImplementation(files("run/mods/dev/spell_engine-${project.spell_engine_version}.jar"))
+//    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
+//    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
 }
 
 processResources {
