--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     modImplementation(files("run/mods/dev/spell_engine-${project.spell_engine_version}.jar"))
 //    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
 //    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
+
+    modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
+    modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
 }
 
 processResources {
