--- a/build.gradle
+++ b/build.gradle
@@ -33,25 +33,23 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 
     // Fabric
-    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
+    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
     // Dependencies
     include(implementation("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}"))
-
-    include(modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}"))
-    modImplementation("dev.emi:trinkets:${project.trinkets_version}")
     modImplementation("mod.azure.azurelibarmor:azurelibarmor-fabric-${project.azure_mc_version}:${project.azure_lib_version}")
-
-//    modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
-    modImplementation("maven.modrinth:spell-power:${project.spell_power_version}")
-    include(modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"))
-    modImplementation(files("run/mods/dev/spell_engine-${project.spell_engine_version}.jar"))
-//    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
+    include(modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}"))
+    modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}")
 //    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
 
+    modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
+    modImplementation("maven.modrinth:spell-power:${project.spell_power_version}")
+//    modImplementation(files("run/mods/dev/spell_engine-${project.spell_engine_version}.jar"))
+//    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
     modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
     modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
+    modImplementation("dev.emi:trinkets:${project.trinkets_version}")
 }
 
 processResources {
