--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     include(implementation("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}"))
     modImplementation("mod.azure.azurelibarmor:azurelibarmor-fabric-${project.azure_mc_version}:${project.azure_lib_version}")
     include(modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}"))
-    modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}")
+    include(modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"))
 //    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
 
     modImplementation("maven.modrinth:spell-engine:${project.spell_engine_version}")
